tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.stderr
warning: unused import: `core::fmt::Debug`
 --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:3:5
  |
3 | use core::fmt::Debug;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0309]: the parameter type `V` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:12
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `V` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V: 'a, W, X, Y>() {
   |                    ++++

error[E0309]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:12
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V, W: 'a, X, Y>() {
   |                       ++++

error[E0310]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:12
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V, W: 'static, X, Y>() {
   |                       +++++++++

error[E0309]: the parameter type `Y` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:12
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `Y` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V, W, X, Y: 'a>() {
   |                             ++++

error[E0309]: the parameter type `V` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:50
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                  ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `V` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V: 'a, W, X, Y>() {
   |                    ++++

error[E0309]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:50
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                  ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V, W: 'a, X, Y>() {
   |                       ++++

error[E0310]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:50
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                  ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V, W: 'static, X, Y>() {
   |                       +++++++++

error[E0309]: the parameter type `Y` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:19:50
   |
19 |     let _: TypeParams<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                  ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `Y` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
18 | fn _foo<'a, T, U, V, W, X, Y: 'a>() {
   |                             ++++

error[E0309]: the parameter type `V` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:12
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `V` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V: 'a, W, X, Y>() {
   |                    ++++

error[E0309]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:12
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V, W: 'a, X, Y>() {
   |                       ++++

error[E0310]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:12
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V, W: 'static, X, Y>() {
   |                       +++++++++

error[E0309]: the parameter type `Y` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:12
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `Y` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V, W, X, Y: 'a>() {
   |                             ++++

error[E0309]: the parameter type `V` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:58
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                          ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `V` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V: 'a, W, X, Y>() {
   |                    ++++

error[E0309]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:58
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                          ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V, W: 'a, X, Y>() {
   |                       ++++

error[E0310]: the parameter type `W` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:58
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                          ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `W` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V, W: 'static, X, Y>() {
   |                       +++++++++

error[E0309]: the parameter type `Y` may not live long enough
  --> tests/misc_tests/stw_ui_tests/stw_macro_type_lt_bounds-err.rs:23:58
   |
23 |     let _: TypeParamsAngBrack<'a, T, U, V, W, X, Y, _> = MakeTypeWitness::MAKE;
   |                                                          ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `Y` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
22 | fn _bar<'a, T, U, V, W, X, Y: 'a>() {
   |                             ++++
